Adjustments to font

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -26,16 +26,19 @@ overflow-y: auto;
 }
 
 h4 {
-  font-size: 80px;
+  font-size: 60px;
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 45px;
 }
 h6{
-  font-size: 30px;
+  font-size: 35px;
 }
 
+h3{
+  font-style: italic;
+}
 header {
   text-align: center;
 }
