--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,7 +9,7 @@ body
 }
 .container {
   // transform:rotate(20deg);
-margin: 0px 400px 400px 800px;
+margin: 0px 400px 400px 700px;
   width: 500px;
 height: 400px;
 background-image: url(https://i.pinimg.com/736x/27/9c/77/279c7780a62056f983db7b5cfcafe4d4.jpg);
@@ -39,9 +39,9 @@ h6{
 h3{
   font-style: italic;
 }
-header {
-  text-align: center;
-}
+// header {
+//   text-align: center;
+// }
 
 
 // transform:rotate(20deg);
